fixed text overflow in screen

--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
     padding-right: 15px;
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .button-holder{
